src-tauri/tests/snapshots/pipeline_streams__stream_replay@opencode__compaction-summary.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/opencode/compaction-summary.jsonl
---
line_count: 10
checkpoint_count: 1
checkpoints:
  - line_index: 8
    event_type: opencode/session.idle
    roles:
      - assistant
    last_part_types:
      - system-notice
      - reasoning
      - text
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 3
persisted_turns:
  turn_count: 1
  total_blocks: 3
  turns:
    - role: assistant
      block_types:
        - compaction
        - reasoning
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - system-notice
        - reasoning
        - text
