src-tauri/tests/snapshots/pipeline_streams__stream_replay@opencode__file-parts.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/opencode/file-parts.jsonl
---
line_count: 13
checkpoint_count: 1
checkpoints:
  - line_index: 10
    event_type: opencode/session.status
    roles:
      - assistant
    last_part_types:
      - text
      - image
      - image
      - file-mention
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 4
persisted_turns:
  turn_count: 1
  total_blocks: 4
  turns:
    - role: assistant
      block_types:
        - text
        - file
        - file
        - file
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - text
        - image
        - image
        - file-mention
