src-tauri/tests/snapshots/pipeline_streams__stream_replay@opencode__session-error-nonterminal.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/opencode/session-error-nonterminal.jsonl
---
line_count: 2
checkpoint_count: 0
checkpoints: []
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 1
persisted_turns:
  turn_count: 0
  total_blocks: 0
  turns: []
historical_render:
  message_count: 0
  messages: []
