src-tauri/tests/snapshots/pipeline_streams__stream_replay@opencode__subagent-task.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/opencode/subagent-task.jsonl
---
line_count: 132
checkpoint_count: 1
checkpoints:
  - line_index: 130
    event_type: opencode/session.status
    roles:
      - assistant
    last_part_types:
      - reasoning
      - tool-call
      - reasoning
      - text
final_state:
  message_count: 1
  roles:
    - assistant
  total_parts: 4
persisted_turns:
  turn_count: 1
  total_blocks: 4
  turns:
    - role: assistant
      block_types:
        - reasoning
        - tool
        - reasoning
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - tool-call
        - reasoning
        - text
      children_tool_names:
        - Bash
