src-tauri/tests/snapshots/pipeline_streams__stream_replay@opencode__todo-list.jsonl.snap
---
source: tests/pipeline_streams.rs
expression: snapshot
input_file: tests/fixtures/streams/opencode/todo-list.jsonl
---
line_count: 118
checkpoint_count: 1
checkpoints:
  - line_index: 116
    event_type: opencode/session.status
    roles:
      - assistant
      - system
    last_part_types:
      - text
final_state:
  message_count: 2
  roles:
    - assistant
    - system
  total_parts: 6
persisted_turns:
  turn_count: 1
  total_blocks: 6
  turns:
    - role: assistant
      block_types:
        - reasoning
        - tool
        - reasoning
        - tool
        - reasoning
        - text
historical_render:
  message_count: 1
  messages:
    - role: assistant
      part_types:
        - reasoning
        - todo-list
        - reasoning
        - reasoning
        - text
